[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["dylib"]

[dependencies]
derivative = "2.2.0"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"
