[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

