[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.1"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.2"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.1"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.3"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.1"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.2"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.1"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.4"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.1"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.2"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.1"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.3"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.1"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.2"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.1"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

[package]
name = "oxide"
authors = ["SNIAPA"]
version = "0.5.5"
edition = "2021"
repository = "https://github.com/SNIAPA/oxide"

[lib]
crate-type = ["dylib"]

[features]
default = ["visuals"]
visuals = []

[dependencies]
derivative = "2.2.0"
elf = "0.7.4"
freetype-sys = "0.20.0"
libc = "0.2.153"
sdl2-sys = "0.36.0"

